--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  padding: 8px;
+
 }
 
 .profile-image {
@@ -45,4 +49,15 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 16px;
+  align-items: center;
+  justify-content: space-between;
+}
+.left-side, .right-side {
+    display: flex;
+    justify-content: space-between;
+}
+.header.purple-buttons {
+    justify-content: flex-end;
 }
