--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ body {
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
-  align-items: center;
   padding: 8px;
+  justify-content: space-between;
 
 }
 
@@ -51,13 +51,11 @@ ul {
   list-style-type: none;
   display: flex;
   gap: 16px;
-  align-items: center;
-  justify-content: space-between;
+  margin: 0;
+  padding: 0;
 }
 .left-side, .right-side {
     display: flex;
-    justify-content: space-between;
-}
-.header.purple-buttons {
-    justify-content: flex-end;
+    gap: 16px;
+    align-items: center;
 }
